<resources>
    <string name="app_name">RecycloWaste</string>

    <string name="home_pickup">Book Pickup</string>
    <string name="home_bookings">My Bookings</string>
    <string name="home_package">My Package</string>
    <string name="home_marketplace">Marketplace</string>
    <string name="home_recycle">Recycle Centers</string>
    <string name="home_user">User Profile</string>
    <string name="home_logout">Log out</string>
    <string name="tv_MarketplaceTitle">Marketplace</string>
    <string name="tv_PostAd">Post Ad</string>
    <string name="tv_prd_title">Product Title</string>
    <string name="prdt_description">Product Description</string>
    <string name="book_pickup_title">Book Pickup</string>
    <string name="book_pickup_type">Type : </string>
    <string name="book_pickup_contains">Contains : </string>
    <string name="book_pickup_location">Location : </string>
    <string name="book_pickup_datetime">Date and Time : </string>
    <string name="book_pickup_confirm">Confirm</string>
    <string name="book_pickup_inptlocation">Please set your location</string>
    <string name="booking_payment_payment">Payment : </string>
    <string name="booking_payment_amount">LKR :  420.69</string>
    <string name="booking_payment_select">Select payment method : </string>
    <string name="booking_payment_creditdebit">Credit/ Debit Card</string>
    <string name="booking_payment_payonpickup">Pay On Pickup</string>
    <string name="booking_payment_proceed">Proceed</string>
    <string name="booking_details_driver">Driver : </string>
    <string name="booking_details_type">Type :  </string>
    <string name="booking_details_contains">Contains :  </string>
    <string name="booking_details_location">Location :  </string>
    <string name="booking_details_date">Date : </string>
    <string name="booking_details_time">Time : </string>
    <string name="booking_details_payment">Payment : </string>
    <string name="booking_details_cancel">Cancel Booking</string>
    <string name="booking_details_reschedule">Re-schedule</string>
    <string name="my_bookings_title">My Bookings</string>
    <string name="my_bookings_driver_text">Driver :</string>
    <string name="my_bookings_type_text">Type :</string>
    <string name="my_bookings_location_text">Location :</string>
    <string name="my_bookings_date_text">Date :</string>
    <string name="my_bookings_time_text">Time :</string>
    <string name="my_bookings_see_details">See Details</string>

    <string name="bt_fordriver">For Driver</string>
    <string name="bt_forbooking">For Booking</string>
    <string name="tv_fordriver1">For Driver</string>
    <string name="tv_ct">Your tip is currently</string>
    <string name="tv_tipview" />
    <string name="bt_hundred">Rs 100</string>
    <string name="bt_fifty">Rs 50</string>
    <string name="bt_fhundred">Rs 500</string>
    <string name="nd_customamount" />
    <string name="bt_done">Pay</string>

    <string name="editAd">Edit Ad</string>
    <string name="prdtImage">Product Image</string>
    <string name="prdtPrice">Product Price</string>
    <string name="addImage">Add Image</string>
    <string name="prdtQuantity">Product Quantity</string>

    <string name="tv_myAds">My Ads</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="TV_allAds">All Ads</string>
    <string name="myAds">My Ads</string>
    <string name="postAdd">Post Ad</string>
    <string name="btn_contact">Contact</string>
    <string name="SamplePrice">25,000</string>
    <string-array name="quantity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="user_profile_title">User Profile</string>
    <string name="user_profile_email">E-Mail</string>
    <string name="user_profile_telno">Telephone No.</string>
    <string name="user_profile_edit_prof">Edit Profile</string>
    <string name="user_profile_change_pwd">Change Password</string>
    <string name="user_profile_delete_acc">Delete Account</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="edit_profile_fname">First Name</string>
    <string name="edit_profile_lname">Last Name</string>
    <string name="edit_profile_email">E-Mail</string>
    <string name="edit_profile_telno">Telephone No.</string>
    <string name="edit_profile_save">Save</string>

    <string name="tv_reviewinfo">Tell us about your recent experience with our service or let us know if you have any questions</string>
    <string name="bt_rating">Submit</string>
    <string name="pt_ur" />
    <string name="tv_userreview">User Review</string>
    <string name="bt_addreview">Add review</string>
    <string name="bt_editreview">Review History</string>
    <string name="tv_forbookingpg1">For Booking</string>
    <string name="tv_reviewinfobook">Rate the booked customers garbage managment and neatness</string>
    <string name="tv_forbookingpg">Rate the booking</string>
    <string name="tv_fordriver">Rate the driver</string>


    <string name="login_companyName">RecycloWaste</string>
    <string name="tv_signIn">Sign In</string>
    <string name="tv_signInmsg">Hi there!Nice to see you again.</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_signIn">Sign In</string>
    <string name="tv_forgotPass">Forgot Password?</string>
    <string name="login_signUp">Sign Up</string>
    <string name="for_forgotpass">Forgot Password</string>
    <string name="forg_msg">You might have received an OTP to your email</string>
    <string name="login_newPass">New Password</string>
    <string name="for_OTP">OTP</string>
    <string name="forg_Change">Change Password</string>
    <string name="home_menu">Main Menu</string>
    <string name="tv_packageName">Package Name</string>
    <string name="tv_gen" />
    <string name="tv_pDuration">Payment Duration</string>
    <string name="tv_totPayment">Total Payment</string>
    <string name="tv_calcAmount">Calculated Amount</string>
    <string name="bt_pay">Pay</string>
    <string name="tv_paymentDetails">Full Name</string>
    <string name="tv_pavkageName">Package Name</string>
    <string name="tv_payFullName">Ranidu Iduwara</string>
    <string name="tv_payPackageName" />
    <string name="tv_paymentMobile">Mobile Number</string>
    <string name="tv_payMobile">0717785896</string>
    <string name="tv_paymentLocation">Location</string>
    <string name="tv_payLocation">26/33,stage 2,Panadura</string>
    <string name="tv_paymentAmount">Payment Amount</string>
    <string name="tv_payAmount">7568.00</string>
    <string name="bt_editPayment" />
    <string name="bt_paymentEdit">Edit</string>
    <string name="bt_paymentConfirm">Confirm Payment</string>
    <string name="tv_fullname">Full Name</string>
    <string name="tv_mobile">Mobile Number</string>
    <string name="tv_pkgName">Package Name</string>
    <string name="tv_mNumber" />
    <string name="tv_fName" />
    <string name="tv_duration">"Time period "</string>
    <string name="bt_save">Save Details</string>
    <string name="tv_packageAmount">Package Payment</string>
    <string name="tv_packPrice" />
    <string name="tv_packageDate">Days Per week</string>
    <string name="tv_dayPerWeek" />
    <string name="btn_unsubscribe">Unsubscribe</string>
    <string name="bt_monthPay">Pay</string>
    <string name="tv_apv"></string>
    <string name="tv_addinfo"></string>
    <string name="tv_wr"></string>
    <string name="et_wr"></string>

    <string name="sign_up_tv_fname">First Name  </string>
    <string name="sign_up_tv_lname">Last Name  </string>
    <string name="sign_up_tv_email">E-Mail  </string>
    <string name="sign_up_tv_telno">Telephone Number </string>
    <string name="sign_up_tv_pwd">Password </string>
    <string name="sign_up_tv_cnfrmpwd">Confirm Password  </string>
    <string name="sign_up_et_fname">Your first name  </string>
    <string name="sign_up_et_lname">Your last name  </string>
    <string name="sign_up_et_email">Your email address  </string>
    <string name="sign_up_et_telno">Your telephone number </string>
    <string name="sign_up_et_pwd">Password </string>
    <string name="sign_up_et_cnfrmpwd">Confirm Password  </string>
    <string name="sign_up_btn_singup">Sign Up </string>
    <string name="marketplace_desc">Sample Description</string>

    <string name="booking_successful_thankyou">Thank You For Using Our Service!</string>
    <string name="booking_successful_seedetails">See Your Bookings</string>
    <string name="booking_successful_confirmed">Your Booking Has Been Confirmed!</string>
    <string name="addReview" />
    <string name="payment_dialog_tv_amount">Amount (LKR) </string>
    <string name="payment_dialog_et_cardno">Card Number </string>
    <string name="payment_dialog_et_expiry">Expiry </string>
    <string name="payment_dialog_et_code">Security Code </string>
    <string name="payment_dialog_cb_terms">I agree to terms  and conditions </string>
    <string name="payment_dialog_btn_pay">Pay </string>
    <string name="tv_wyr">Write your review</string>
    <string name="tv_reason">Reason</string>
    <string name="tv_th">Type here</string>
    <string name="et_reason" />
    <string name="bt_deletebt">Delete</string>
    <string name="bt_addpay">Add</string>
    <string name="default_web_client_i">378116623851-16m4cvp4lhijjklbk3nf4n8u3amca3gf.apps.googleusercontent.com</string>
</resources>
