<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reviews_Driver">

    <TextView
        android:id="@+id/tv_fordriverpg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/tv_fordriver"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_reviewinfo"
        android:layout_width="337dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/tv_reviewinfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fordriverpg" />

    <RatingBar
        android:id="@+id/rb_reviewbook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="36dp"
        android:numStars="5"
        android:stepSize="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reviewinfo"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/bt_ratingbook"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:layout_marginStart="151dp"
        android:layout_marginTop="23dp"
        android:text="@string/bt_rating"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_reviewbook" />

    <TextView
        android:id="@+id/tv_userreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="119dp"
        android:text="@string/tv_userreview"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_reviewbook" />

    <Button
        android:id="@+id/bt_addreviewbook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="48dp"
        android:text="@string/bt_addreview"
        app:backgroundTint="@color/btn_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_userreview" />

    <Button
        android:id="@+id/bt_editreviewbook"
        android:layout_width="128dp"
        android:layout_height="46dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="60dp"
        android:text="@string/bt_editreview"
        android:textSize="12sp"
        app:backgroundTint="@color/btn_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_reviewbook" />

</androidx.constraintlayout.widget.ConstraintLayout>