<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/et_card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_amount"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="31dp"
        android:ems="10"
        android:hint="@string/payment_dialog_et_cardno"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_expiry"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_card_number"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/payment_dialog_et_expiry"
        android:inputType="date" />

    <EditText
        android:id="@+id/et_code"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_expiry"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/payment_dialog_et_code"
        android:inputType="date" />

    <Button
        android:id="@+id/btn_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_terms"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/payment_dialog_btn_pay" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="120dp"
        android:layout_height="37dp"
        android:layout_below="@+id/et_code"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/payment_logos" />

    <CheckBox
        android:id="@+id/cb_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView14"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/payment_dialog_cb_terms" />

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/page_sub_header_font"
        android:text="@string/payment_dialog_tv_amount"
        android:textSize="24sp"
        android:textStyle="bold" />
</RelativeLayout>